# reactive

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ycm_extra_conf.py  AGENTS.md  CLAUDE.md  ase.pc.in  aseegles.pc.in  asegl.pc.in  asegles.pc.in  aseglx.pc.in  asexegles.pc.in  azure-pipelines.yml  do-scan-build.sh  loomworks.json  meson.build  meson_options.txt  mingw64-env.txt  readme.md  readme.org  slowfinder.py
gtest/: meson.build
src/: meson.build
src/ase/: AGENTS.md  commandbuffer.cpp  dispatcher.cpp  drawcommand.cpp  fragmentshader.cpp  framebuffer.cpp  genericwindow.cpp  indexbuffer.cpp  keycode.cpp  mesh.cpp  meson.build  nameduniformbuffer.cpp  namedvertexspec.cpp  pipeline.cpp  platform.cpp  pointerbuttonevent.cpp  program.cpp  readme.md  renderable.cpp  rendercommand.cpp  rendercontext.cpp  renderqueue.cpp  rendertarget.cpp  rendertargetobject.cpp  texture.cpp  uniformbuffer.cpp  vertexbuffer.cpp  vertexshader.cpp  window.cpp
src/ase/dummy/: dummyframebuffer.cpp  dummyplatform.cpp  dummyprogram.cpp  dummyrenderbuffer.cpp  dummyrendercontext.cpp  dummytexture.cpp  dummyuniformset.cpp  dummywindow.cpp
src/ase/gl/: glblendmode.cpp  glblendmode.h  glbuffer.cpp  gldispatchedcontext.cpp  gldispatchedcontext.h  glerror.cpp  glerror.h  glformat.h  glfragmentshader.cpp  glframebuffer.cpp  glfunctions.h  glindexbuffer.cpp  globjectmanager.cpp  globjectmanager.h  glpipeline.cpp  glpipeline.h  glplatform.cpp  glprogram.cpp  glrenderbuffer.cpp  glrendercontext.cpp  glrenderqueue.cpp  glrenderstate.cpp  glrenderstate.h  glrendertargetobject.cpp  glshader.cpp  gltexture.cpp  gltype.cpp  gltype.h  gluniformbuffer.cpp  gluniformbuffer.h  glusage.h  glvertexbuffer.cpp  glvertexshader.cpp
src/ase/glx/: glxcontext.cpp  glxcontext.h  glxdispatchedcontext.cpp  glxdispatchedcontext.h  glxframebuffer.cpp  glxframebuffer.h  glxplatform.cpp  glxrendercontext.cpp  glxwindow.cpp
src/ase/src/: debug.h  drawcommand.cpp  fragmentshader.cpp  genericwindow.cpp  keycode.cpp  keyevent.cpp  mesh.cpp  namedvertexspec.cpp  platform.cpp  program.cpp  renderbuffer.cpp  textevent.cpp  uniformbuffer.cpp  uniformset.cpp  vertexspec.cpp  window.cpp
src/ase/wgl/: wglcontext.h  wglplatform.cpp  wglrendercontext.cpp  wglwindow.cpp
src/ase/windows/: wgldispatchedcontext.cpp  wgldispatchedcontext.h  wglframebuffer.cpp  wglframebuffer.h  wglplatform.cpp  wglrendercontext.cpp  wglwindow.cpp  windowsplatform.cpp  windowsrendercontext.cpp  windowswindow.cpp
src/avg/: AGENTS.md  animated.cpp  drawing.cpp  drawnode.cpp  font.cpp  fontmanager.cpp  lerp.cpp  meson.build  obb.cpp  painter.cpp  path.cpp  pathbuilder.cpp  pathspec.cpp  pen.cpp  readme.md  rect.cpp  region.cpp  rendering.cpp  rendertree.cpp  shape.cpp  simplepolygon.cpp  softmesh.cpp  targetimage.cpp  textentry.cpp
src/avg/clipper/: clipper.cpp  clipper.hpp
src/avg/curve/: curves.cpp
src/avg/src/: animated.cpp  debug.h  drawcontext.cpp  font.cpp  fontimpl.cpp  fontimpl.h  painter.cpp  path.cpp  pathbuilder.cpp  pathcrossing.cpp  pen.cpp  polyline.cpp  rect.cpp  region.cpp  rendering.cpp  rendertree.cpp  shape.cpp  softmesh.cpp  traceresource.h
src/avg/test/: brushtest.cpp  drawtest.cpp  fonttest.cpp  hashtest.cpp  pathcrossingtest.cpp  pentest.cpp  snapshottest.cpp
src/bq/: AGENTS.md  meson.build  readme.md
src/bq/test/: arraysignaltest.cpp  datacontexttest.cpp  picktest.cpp  sharedvectortest.cpp  signalcontexttest.cpp  signaltest.cpp  streamtest.cpp
src/bqui/: AGENTS.md  meson.build  readme.md
src/bqui/src/: annotation.cpp  app.cpp  clickevent.cpp  debug.h  growsizehint.cpp  hoverevent.cpp  inputarea.cpp  keyboardinput.cpp  pointerbuttonevent.cpp  pointermoveevent.cpp  shapes.cpp  simplesizehint.cpp  sizehint.cpp  stacksizehint.cpp  theme.cpp  widgetobject.cpp  window.cpp  windowdata.h  windowlist.cpp  windowlist.h  withanimation.cpp
src/bqui/test/: agentcontrollooptest.cpp  apptest.cpp  collectiontest.cpp  databindtest.cpp  headlessapptest.cpp  introspectionjsontest.cpp  introspectiontest.cpp  jsontest.cpp  layouttest.cpp  rendertreetest.cpp  resulttest.cpp  sessiontest.cpp  shapetest.cpp  transporttest.cpp  widgetinstancemodifiertest.cpp  widgettest.cpp  windowtest.cpp
src/btl/: AGENTS.md  meson.build  readme.md
src/btl/test/: asyncstresstest.cpp  asynctest.cpp  btlreducetest.cpp  clonetest.cpp  invoketest.cpp  lrucachetest.cpp  manualfuture.h  pmrtest.cpp  threadpooltest.cpp  typelisttest.cpp  uniquetest.cpp  utf8test.cpp
src/inspectorapp/: main.cpp  meson.build
src/reactive/: annotation.cpp  app.cpp  box.cpp  clickevent.cpp  debug.h  drawcontext.cpp  dummyapp.cpp  glxapp.cpp  growsizehint.cpp  hbox.cpp  hoverevent.cpp  inputarea.cpp  keyboardinput.cpp  layout.cpp  meson.build  pointerbuttonevent.cpp  pointermoveevent.cpp  rendering.cpp  shapes.cpp  simplesizehint.cpp  sizehint.cpp  stack.cpp  stacksizehint.cpp  traceresource.h  uniformgrid.cpp  vbox.cpp  window.cpp  windowsapp.cpp  withanimation.cpp
src/reactive/debug/: drawkeyboardinputs.cpp
src/reactive/shape/: rectangle.cpp
src/reactive/signal/: datacontext.cpp
src/testapp1/: adder.cpp  adder.h  curvevisualizer.cpp  curvevisualizer.h  main.cpp  meson.build  spinner.cpp  spinner.h  testwidget.cpp  testwidget.h
src/testapp2/: main.cpp  meson.build
src/testapp3/: adder.cpp  adder.h  main.cpp  meson.build
test/: animatedtest.cpp  asynctest.cpp  avgtransformtest.cpp  blipsignaltest.cpp  btlcollectiontest.cpp  bundletest.cpp  clonetest.cpp  collectiontest.cpp  colortest.cpp  config.h.in  countsignaltest.cpp  databindsignaltest.cpp  databindtest.cpp  droprepeatssignaltest.cpp  filetest.cpp  fmaptest.cpp  foldpsignaltest.cpp  fonttest.cpp  functionaltest.cpp  grouptest.cpp  hashtest.cpp  inputsignaltest.cpp  iteratetest.cpp  joinsignaltest.cpp  mapsignaltest.cpp  meson.build  optiontest.cpp  pathtest.cpp  pmrtest.cpp  sharedtest.cpp  signal2test.cpp  signalresulttest.cpp  signaltest.cpp  signaltester.h  signalthreadedtest.cpp  signaltypereductiontest.cpp  signalwraptest.cpp  streamtest.cpp  timesignaltest.cpp  tracksignaltest.cpp  (+9 more)
(+957 files in other folders)
