

# check_LTLIBRARIES = libgtest.la

# noinst_HEADERS = src/gtest-internal-inl.h

# libgtest_la_CPPFLAGS = -I$(top_srcdir)/gtest/include
library('libgtest',
'src/gtest-all.cc',
'src/gtest-test-part.cc',
'src/gtest.cc',
'src/gtest_main.cc',
'src/gtest-typed-test.cc',
'src/gtest-death-test.cc',
'src/gtest-port.cc',
'src/gtest-filepath.cc',
'src/gtest-printers.cc')

